js/src/tests/test262/built-ins/Error/S15.11.1_A1_T1.js
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
var
err1
=
Error
(
)
;
if
(
err1
.
constructor
!
=
=
Error
)
{
ERROR
(
'
#
1
:
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
var
err1
=
Error
(
)
;
err1
.
constructor
=
=
=
Error
.
Actual
:
'
+
err1
.
constructor
)
;
}
reportCompare
(
0
0
)
;
